--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           
      <img src="images/cloud.png" style="position: absolute; height: 220px;margin-bottom: 45%;">
      <p style="color: black;position:absolute;font-size: xx-large;font-style: italic;" id="temperature">Temperature🌡️</p>
-     <p style="color: black;position:absolute;font-size: xx-large;font-style: italic;margin-top: 150px;">City</p>
+     <p style="color: black;position:absolute;font-size: xx-large;font-style: italic;margin-top: 150px;" id="city">City</p>
      <p style="color: black;position:absolute;font-size: xx-large;font-style: italic;margin-top: 80%;margin-right: 67%;" id="humidity">Humidity</p>
      <p style="font-size: xxx-large;position:absolute;margin-top: 100%;margin-right: 67%;">💦</p>
      <p style="color: black;position:absolute;font-size: xx-large;font-style: italic;margin-top: 80%;margin-left: 62%;" id="wind">Wind speed</p>
